🔨 fix: fix the align problem in the myform component

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -188,6 +188,19 @@
   padding-top: 20px;
 }
 
+.my-custom-form-limit {
+  height: calc(100vh - 294.5px) !important;
+  border-top: 1px solid var(--color-neutral-3);
+  border-bottom: 1px solid var(--color-neutral-3);
+  display: flex;
+  overflow-y: auto;
+  gap: 2vh;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 3vw;
+  padding-top: 20px;
+}
+
 .form-wrapper-custom {
   overflow-x: hidden;
   overflow-y: hidden;
